调整文件目录

--- a/笔记目录.md
+++ b/笔记目录.md
@@ -1,4 +1,4 @@
 # 笔记目录
 ## Jmeter测试笔记
-- [Jmeter测试脚本录制笔记](https://github.com/shanrufu/StudyNotes/blob/master/%E6%B5%8B%E8%AF%95%E7%AC%94%E8%AE%B0/Jmeter%E8%84%9A%E6%9C%AC%E5%BD%95%E5%88%B6.md)
-- [Jmeter接口并发测试笔记](https://github.com/shanrufu/StudyNotes/blob/master/%E6%B5%8B%E8%AF%95%E7%AC%94%E8%AE%B0/Jmeter%E6%8E%A5%E5%8F%A3%E5%B9%B6%E5%8F%91%E6%B5%8B%E8%AF%95.md)
+- [Jmeter测试脚本录制笔记](https://github.com/shanrufu/StudyNotes/blob/master/Jmeter/Jmeter%E8%84%9A%E6%9C%AC%E5%BD%95%E5%88%B6.md)
+- [Jmeter接口并发测试笔记](https://github.com/shanrufu/StudyNotes/blob/master/Jmeter/Jmeter%E6%8E%A5%E5%8F%A3%E5%B9%B6%E5%8F%91%E6%B5%8B%E8%AF%95.md)
